Corrected spacing between lines in show view and grouped Company Information

--- a/branches/timedesk-prototype-1.0/source/timedesk/src/main/webapp/styles/standard.css
+++ b/branches/timedesk-prototype-1.0/source/timedesk/src/main/webapp/styles/standard.css
@@ -158,6 +158,7 @@ div {
 div .box {
 	display:block;
 	margin-left:105px;
+	height: 12px;
 }
 
 /* menu elements*/
